bk_ida/gccida/g0/propagate_deps
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_deps/src/sched-rgn.c:2893:31: error: unknown type name 'deps_0'
void  propagate_deps( int bb, deps_0 *pred_deps) 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_deps/src/sched-rgn.c:2898:1: error: use of undeclared identifier 'deps_0'
deps_0 *succ_deps; // [rsp+38h] [rbp-38h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_deps/src/sched-rgn.c:2898:9: error: use of undeclared identifier 'succ_deps'
deps_0 *succ_deps; // [rsp+38h] [rbp-38h] 
        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_deps/src/sched-rgn.c:2903:20: error: expected identifier or '('
unsigned __int64 *(short *)0x; // [rsp+50h] [rbp-20h] 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_deps/src/sched-rgn.c:2903:20: error: expected ')'
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_deps/src/sched-rgn.c:2903:19: note: to match this '('
unsigned __int64 *(short *)0x; // [rsp+50h] [rbp-20h] 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_deps/src/sched-rgn.c:2904:16: error: expected identifier or '('
unsigned int *(short *)0xnum_; // [rsp+58h] [rbp-18h] 
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_deps/src/sched-rgn.c:2904:16: error: expected ')'
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_deps/src/sched-rgn.c:2904:15: note: to match this '('
unsigned int *(short *)0xnum_; // [rsp+58h] [rbp-18h] 
              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_deps/src/sched-rgn.c:2918:1: error: use of undeclared identifier 'succ_deps'
succ_deps = &bb_deps[bb_succ]; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_deps/src/sched-rgn.c:2923:12: error: invalid suffix 'xnum_' on integer constant
*(short *)0xnum_ = 0; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_deps/src/sched-rgn.c:2927:12: error: invalid suffix 'xnum_' on integer constant
*(short *)0xnum_ = 0; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_deps/src/sched-rgn.c:2931:20: error: invalid suffix 'xnum_' on integer constant
while ( *(short *)0xnum_ <= 1 ) 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_deps/src/sched-rgn.c:2933:12: error: invalid suffix 'x' on integer constant
*(short *)0x = ptr_->bits[*(short *)0xnum_]; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_deps/src/sched-rgn.c:2933:38: error: invalid suffix 'xnum_' on integer constant
*(short *)0x = ptr_->bits[*(short *)0xnum_]; 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_deps/src/sched-rgn.c:2934:17: error: invalid suffix 'x' on integer constant
if ( *(short *)0x ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_deps/src/sched-rgn.c:2938:40: error: invalid suffix 'x' on integer constant
if ( ( ( 1LL << bit_num_) & *(short *)0x) != 0 ) 
                                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_deps/src/sched-rgn.c:2940:12: error: invalid suffix 'x' on integer constant
*(short *)0x &= ~( 1LL << bit_num_); 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_deps/src/sched-rgn.c:2941:39: error: invalid suffix 'xnum_' on integer constant
reg = ( ( 2 * ptr_->indx + *(short *)0xnum_) << 6) + bit_num_; 
                                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_deps/src/sched-rgn.c:2943:12: error: use of undeclared identifier 'succ_deps'
succ_rl = &succ_deps->reg_last[reg]; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_deps/src/sched-rgn.c:2949:18: error: invalid suffix 'x' on integer constant
if ( !*(short *)0x ) 
                 ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_deps/src/obj/sched-rgn.o] Error 1
